# ArkTS-programming

./: .gitignore  EXAMPLES.md  PITFALLS.md  README.md  REFERENCE.md  SKILL.md  pyproject.toml
arkagent/: __init__.py  cli.py  config.py  server.py
arkagent/indexer/: __init__.py  builder.py  query.py  schemas.py
arkagent/rules/: __init__.py
arkagent/tools/: __init__.py  gate.py
docs/: README.md
docs/arkts/: arkts-common-components-video-player.md  arkts-concurrency.md  arkts-cross-language-interaction.md  arkts-decorator-overview.md  arkts-get-started.md  arkts-glossary.md  arkts-overview.md  arkts-runtime.md  arkts-utils.md  buffer.md  introduction-to-arkts.md  start-with-ets-stage.md  taskpool-introduction.md  typescript-to-arkts-migration-guide.md  worker-introduction.md  xml-overview.md
docs/arkui/: arkui-glossary.md  arkui-overview.md  ui-debug-optimize.md  ui-js-dev.md  window-manager.md
docs/arkweb/: 00-INDEX.md  app-takeovers-web-media.md  arkweb-glossary.md  arkweb-ndk-jsbridge.md  arkweb-ndk-page-data-channel.md  web-app-page-data-channel.md  web-clipboard.md  web-component-overview.md  web-cookie-and-data-storage-mgmt.md  web-createpdf.md  web-data-detector.md  web-debugging.md  web-default-useragent.md  web-download.md  web-event-sequence.md  web-file-upload.md  web-getpage-height.md  (+26 more)
scripts/: batch_arkts.json  fetch_all.sh  fetch_batch.json  fetch_huawei_doc.py  health-report.sh  install-hooks.sh  quick-check.sh  rules-template.json  scaffold.sh  self-check.sh  url_catalog.json
tests/: test_builder.py  test_check_syntax.py  test_gate.py
(+29 files in other folders)
